crates/nash-driver/tests/solve/snapshots/solve__inference__typed_identity.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "Code:\n\nmodule Main exposing (id)\n\nid : 'a -> 'a\nid x = x\n"
---
id : forall a. a -> a
