crates/nash-driver/tests/solve/snapshots/solve__inference__typed_union_function.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "Code:\n\nmodule Main exposing (Shape(..), rotate)\n\ntype Shape\n    = Circle\n    | Square\n\nrotate : Shape -> Shape\nrotate shape = shape\n"
---
rotate : Shape -> Shape
