crates/nash-driver/tests/solve/snapshots/solve__inference__union_constructors.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "Code:\n\nmodule Main exposing (Maybe(..), just, nothing)\n\ntype Maybe 'a\n    = Just 'a\n    | Nothing\n\njust = Just\n\nnothing = Nothing\n"
---
just : forall a. Big a => a -> Maybe a
nothing : forall a. Big a => Maybe a
