crates/nash-driver/tests/solve/snapshots/solve__inference__unit_impl_syntax_matches_named_builtin.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "Code:\n\nmodule Main exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep () where\n    keep x = x\nmain : Builtin.unit\nmain = keep ()\n"
---
main : unit
