crates/nash-driver/tests/solve/snapshots/solve__inference__unit_value.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "Code:\n\nmodule Main exposing (nothing)\n\nnothing = ()\n"
---
nothing : unit
